<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
            android:paddingTop="24dp"
            android:id="@+id/citiesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/item_city">

    </androidx.recyclerview.widget.RecyclerView>

    <EditText
            android:id="@+id/etSearchInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_search_here"
            android:ems="10"
    />
    <Button
            android:id="@+id/btnSearch"
            android:text="@string/action_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>